# ImmuneMesh

./: CONTRIBUTING.md  LICENSE  README.md
immunemesh/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
immunemesh/benchmarks/: benign_corpus_eval.py
immunemesh/demo/: dashboard.py  simulated_mesh.py
immunemesh/docs/: DEMO_SCRIPT.md  LINKEDIN_POST.md  architecture.md
immunemesh/immunemesh/: __init__.py
immunemesh/immunemesh/actuator/: __init__.py  audit_log.py  quarantine.py
immunemesh/immunemesh/control_plane/: __init__.py  antibody_store.py
immunemesh/immunemesh/middleware/: __init__.py  langgraph_hooks.py
immunemesh/immunemesh/signals/: __init__.py  baseline.py  canary.py  embeddings.py
immunemesh/immunemesh/testing/: __init__.py  fakes.py
