[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "immunemesh"
version = "0.2.0"
description = "A runtime behavioral immune system for multi-agent AI meshes."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["immunemesh*"]
